--- a/style.css
+++ b/style.css
@@ -12,10 +12,29 @@
 }
 
 .tab {
+  display: block;
   background-color: red;
   color: white;
   margin: 10px 10px;
   padding: 5px 10px;
+}
+
+.hidden {
+  display: none;
+}
+
+.active {
+  color: purple;
+}
+
+.tab-content-container {
+  max-width: 600px;
+  margin: 10px auto;
+}
+
+.tab-content img {
+  width: 100%;
+  object-fit: cover;
 }
 
 @media (max-width: 767px) {
