--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
 .hamburger-nav {
   background-color: green;
   padding: 10px;
+  height: auto;
+  transition: max-height 1s ease;
+}
+
+.expanded {
+  max-height: 1000px !important;
 }
 
 .tab {
@@ -43,13 +49,15 @@
     justify-content: flex-end;
   }
   .hamburger-nav {
-    display: none;
+    max-height: 0px;
     flex-direction: column;
     position: absolute;
     width: 100%;
     left: 0;
     padding: 0;
     top: 100%;
+    max-height: 0px;
+    overflow: hidden;
   }
   #hamburger {
     display: block;
